# fsp

./: .env  Makefile  README.md  difference.session.sql  docker-compose.dev.yaml  docker-compose.prod.yaml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3449c4fc92fa_.py  360885ad64b5_.py  68249741ac51_.py  8cdf3cc9b969_.py  b505035bfb3a_.py
backend/src/: main.py
backend/src/apps/: models.py  utils.py
backend/src/apps/FSP/: dependencies.py  models.py  repository.py  router.py  schemas.py  services.py
backend/src/settings/: config.py  const.py  db.py
backend/tests/: conftest.py  test_route.py  test_router.py  test_services.py
