[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["AkiiraBino <IvanShevchenko082002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.20"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
alembic = "^1.12.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"
pytest = "^7.4.1"
asyncio = "^3.4.3"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]